--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-slick": "^0.23.10",
     "antd": "^5.9.2",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0"
   },
