--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
 	},
 	"dependencies": {
 		"@types/js-cookie": "^3.0.4",
+		"@types/jwt-decode": "^3.1.0",
 		"@types/react-slick": "^0.23.10",
 		"antd": "^5.9.2",
 		"axios": "^1.5.0",
 		"dayjs": "^1.11.10",
 		"js-cookie": "^3.0.5",
+		"jwt-decode": "^3.1.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
