--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.6",
 		"@types/js-cookie": "^3.0.4",
 		"@types/jwt-decode": "^3.1.0",
 		"@types/react-slick": "^0.23.10",
@@ -21,12 +22,16 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
+		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.16.0",
-		"react-slick": "^0.29.0"
+		"react-slick": "^0.29.0",
+		"redux-persist": "^6.0.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
+		"@types/react-redux": "^7.1.27",
+		"@types/redux-persist": "^4.3.1",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"@vitejs/plugin-react": "^4.0.3",
