--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.16.0",
 		"react-slick": "^0.29.0",
-		"redux-persist": "^6.0.0"
+		"redux-persist": "^6.0.0",
+		"slick-carousel": "^1.8.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
