--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/js-cookie": "^3.0.4",
 		"@types/jwt-decode": "^3.1.0",
 		"@types/react-slick": "^0.23.10",
+		"@types/uuid": "^9.0.7",
 		"antd": "^5.9.2",
 		"axios": "^1.5.0",
 		"dayjs": "^1.11.10",
@@ -26,7 +27,8 @@
 		"react-router-dom": "^6.16.0",
 		"react-slick": "^0.29.0",
 		"redux-persist": "^6.0.0",
-		"slick-carousel": "^1.8.1"
+		"slick-carousel": "^1.8.1",
+		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
