--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://dathymax.github.io/customer-shoes/",
 	"name": "jobs-datn-shoes-e-customerfe-reactjs",
 	"private": true,
 	"version": "0.0.0",
@@ -7,7 +8,9 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.6",
@@ -18,6 +21,7 @@
 		"antd": "^5.9.2",
 		"axios": "^1.5.0",
 		"dayjs": "^1.11.10",
+		"gh-pages": "^6.0.0",
 		"js-cookie": "^3.0.5",
 		"jwt-decode": "^3.1.2",
 		"react": "^18.2.0",
